--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -15,26 +15,16 @@ jobs:
       - name: Add Gemfile
         run: |
           cat > Gemfile << EOM
-          source "https://rubygems.pkg.github.com/${{ github.repository_owner }}" do
-            gem "rubygems-publish"
+          source "https://rubygems.pkg.github.com/linksquares" do
+            gem "gh-package-poc"
           end
           EOM
 
-      - name: Add main.rb
-        run: |
-          cat > main.rb << EOM
-          require 'rubygems-publish'
-          RubyGemsPublish.hello
-          EOM
-
       - name: Authenticate using Bundler
-        run: bundle config https://rubygems.pkg.github.com/${{ github.repository_owner }} token:${{ secrets.READ_PACKAGES_TOKEN }}
+        run: bundle config https://rubygems.pkg.github.com/linksquares token:${{ secrets.READ_PACKAGES_TOKEN }}
 
       - name: Install using Bundler
         run: bundle install
-
-      - name: Run using bundle exec
-        run: bundle exec ruby main.rb
 
   gem-install:
     runs-on: ubuntu-latest
@@ -55,20 +45,10 @@ jobs:
           :bulk_threshold: 1000
           :sources:
           - https://rubygems.org/
-          - https://token:${{ secrets.READ_PACKAGES_TOKEN }}@rubygems.pkg.github.com/${{ github.repository_owner }}/
+          - https://token:${{ secrets.READ_PACKAGES_TOKEN }}@rubygems.pkg.github.com/linksquares/
           :update_sources: true
           :verbose: true  
           EOM
 
       - name: Install Gem
-        run: gem install rubygems-publish
-
-      - name: Add main.rb
-        run: |
-          cat > main.rb << EOM
-          require 'rubygems-publish'
-          RubyGemsPublish.hello
-          EOM
-
-      - name: Run using ruby
-        run: ruby main.rb
+        run: gem install gh-package-poc
