gem install gh-package-poc --version "0.1.18"

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -51,4 +51,4 @@ jobs:
           EOM
 
       - name: Install Gem
-        run: gem install gh-package-poc
+        run: gem install gh-package-poc --version "0.1.18"
