--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup Ruby 2.6
         uses: actions/setup-ruby@v1
         with:
-          version: 2.6.x
+          ruby-version: 2.6.x
 
       - name: Add Gemfile
         run: |
@@ -35,7 +35,7 @@ jobs:
       - name: Setup Ruby 2.6
         uses: actions/setup-ruby@v1
         with:
-          version: 2.6.x
+          ruby-version: 2.6.x
 
       - name: Add ~/.gemrc
         run: |
